--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@
     <h1>Тут будет нормальный сайт</h1>
     <p>Самостоятельно создать структуру сайта: каталоги pages, img, style</p>
     <p>Создать 3-4 веб-страницы и использованием стилей CSS</p>
+    <p>добавить эффекты и формы JS</p>
 </body>
 </html>
